sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: '=' expected but ';' found.
while (ecart > 1) {
^